--- a/.build/assets/styles/admin/_generate.css
+++ b/.build/assets/styles/admin/_generate.css
@@ -33,11 +33,8 @@ input[type=text].aoccssio-generate__input,
 	width: 90%;
 	@include transition();
 
-	&.-pop {
+	&--error-pop {
 		transform: scale(1.05);
-	}
-
-	&.-error {
 		border-color: #a00;
 	}
 }
