--- a/.build/assets/styles/admin/generate.css
+++ b/.build/assets/styles/admin/generate.css
@@ -1,5 +1,5 @@
 .aoccssio-generate {
-	&.aoccssio-generate + .aoccssio-generate {
+	& + .aoccssio-generate {
 		border-top: 1px solid #d3d3d3;
 		margin-top: 20px;
 		padding-top: 20px;
@@ -18,6 +18,13 @@
 	&__input {
 		width: 40%;
 		margin-right: 20px;
+		transition: all 200ms;
+
+		&--error-pop {
+			transform: scale(1.05);
+			border-color: #a00 !important;
+			background-color: rgba(168, 20, 0, 0.05) !important;
+		}
 	}
 
 	&__controls {
